test/fail/Issue328.agda
module Issue328 where

mutual

  postulate D : Set

-- An internal error has occurred. Please report this as a bug.
-- Location of the error: src/full/Agda/Syntax/Concrete/Definitions.hs:398
